--- a/XpenS/package.json
+++ b/XpenS/package.json
@@ -10,13 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.4",
+    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/progress-bar-android": "^1.0.5",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.16",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^0.26.1",
     "react": "18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-native": "0.72.6",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-actions-sheet": "^0.9.0-alpha.24",
+    "react-native-element-dropdown": "^2.10.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-gifted-charts": "^1.3.16",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-paper": "^5.11.1",
+    "react-native-paper-dates": "^0.20.4",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^3.27.0",
+    "react-native-svg": "^14.0.0",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,5 +57,7 @@
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
