--- a/XpenS/package.json
+++ b/XpenS/package.json
@@ -16,9 +16,13 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
     "axios": "^0.26.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-google-charts": "^4.0.1",
     "react-native": "0.72.6",
@@ -29,14 +33,19 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-textfield": "^0.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dates": "^0.20.4",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-progress": "^5.0.1",
-    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.27.0",
-    "react-native-svg": "^14.0.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-svg": "^12.1.1",
+    "react-native-toast-message": "^2.1.7",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
